# presence

./: .editorconfig  .env  .env.example  .gitignore  App.sample.toml  Cargo.toml  Makefile  README.md  deploy.init.sh  nats.creds  presence.sample.toml  skaffold.yml  sqlx-data.json
.github/workflows/: build-dev-artifacts.yml  build-release-artifacts.yml  check.yml  ci.yml  deploy.yml  docs.yml  mdbook.yml  release.yml
chart/: Chart.yaml  README.md  sample.yaml  values.example.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  app-cm.yaml  configmap.yaml  deploy.yaml  env.yaml  headless-svc.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  statefulset.yaml  sts.yaml
chart/templates/network/: cluster-svc.yaml  ing.yaml
chart/templates/rbac/: role.yaml  rolebinding.yaml  sa.yaml
chart/templates/tests/: test-connection.yaml
chart/templates/util/: servicemonitor.yaml
docker/: Dockerfile  migration.dockerfile
docker/development/: docker-compose.yml
docker/development/nats/: nats.conf  nats.conf.example
docs/: book.toml
docs/src/: SUMMARY.md  agent.md  authz.md  internal.md  overview.md  session.md  workflow.md
docs/src/agent/: api.md  events.md
docs/src/internal/: database_schema.md
docs/src/session/: api.md  errors.md  events.md  internal_api.md
migrations/: 20220204101115_create_type_accoun_id.down.sql  20220204101115_create_type_accoun_id.sql  20220204101325_create_type_agent_id.down.sql  20220204101325_create_type_agent_id.up.sql  20220204101411_create_table_agent_session.down.sql  20220204101411_create_table_agent_session.sql  20220204101411_create_table_agent_session.up.sql  20220204101411_create_table_session.sql  20220204103437_create_table_agent_session_history.down.sql  20220204103437_create_table_agent_session_history.sql  20220204103437_create_table_agent_session_history.up.sql  20220204103437_create_table_session_history.sql  20220314132636_create_table_old_agent_session.sql  20220512175033_remove_outdated_from_agent_session.down.sql  20220512175033_remove_outdated_from_agent_session.up.sql  20220516084809_create_table_replica.down.sql  20220516084809_create_table_replica.sql  20220516095651_change_replica_id.down.sql  20220516095651_change_replica_id.sql
src/: authz.rs  authz_hack.rs  classroom.rs  config.rs  main.rs  session.rs  state.rs  tracing.rs
src/app/: error.rs  history.rs  history_manager.rs  http.rs  local_ip.rs  metrics.rs  mod.rs  replica.rs  router.rs  session_manager.rs  state.rs  util.rs  ws.rs
src/app/api/: mod.rs
src/app/api/internal/session/: mod.rs
src/app/api/v1/: mod.rs
src/app/api/v1/classroom/: mod.rs
src/app/api/v1/counter/: mod.rs
src/app/api/v1/session/: mod.rs
src/app/nats/: mod.rs
src/app/ws/: event.rs  handler.rs  mod.rs
src/db/: agent_session.rs  agent_session_history.rs  mod.rs  old_agent_session.rs  replica.rs
src/session/: id.rs  key.rs  kind.rs  map.rs  mod.rs
src/test_helpers/: agent.rs  authn.rs  authz.rs  db.rs  mod.rs  state.rs  test_container.rs
src/test_helpers/factory/: agent_session.rs  agent_session_history.rs  mod.rs
