[package]
name = "presence"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.4", features = ["ws"] }
config = "0.11"
futures-util = "0.3"
http = "0.2"
humantime-serde = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls" , "postgres", "offline", "uuid"] }
svc-agent = { version = "0.19", features = ["sqlx"] }
svc-authn = { version = "0.7", features = ["jose", "sqlx"] }
svc-error = { version = "0.4", features = ["sentry-extension", "sqlx", "serialize-status-code"] }
svc-utils = { version = "0.1", features = ["log-middleware", "authn-extractor"] }
tokio = { version = "1.16", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Optional dependencies
dotenv = { version = "0.15.0", optional = true }

[dev-dependencies]
testcontainers = "0.12"
