[package]
name = "presence"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.5", features = ["ws"] }
chrono = { version = "0.4" }
config = { version = "0.13", default-features = false, features = ["toml"] }
crossbeam-channel = "0.5"
dotenv = { version = "0.15", optional = true }
futures-util = "0.3"
http = "0.2"
humantime-serde = "1.0"
nats = "0.19"
once_cell = "1.10"
prometheus = "0.13"
sentry = { version = "0.25", default-features = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls" , "postgres", "offline", "uuid", "time", "offline"] }
svc-agent = { version = "0.19", features = ["sqlx"] }
svc-authn = { version = "0.7", features = ["jose", "sqlx"] }
svc-authz = "0.11"
svc-error = { version = "0.4", features = ["sentry-extension", "sqlx", "serialize-status-code"] }
svc-utils = { version = "0.3", features = ["log-middleware", "authn-extractor", "metrics-middleware", "cors-middleware"] }
thiserror = "1.0"
tokio = { version = "1.16", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "0.8", features = ["v4", "serde"] }

[dev-dependencies]
testcontainers = "0.12"
