[package]
name = "presence"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.5", features = ["ws"] }
chrono = { version = "0.4" }
config = { version = "0.13", default-features = false, features = ["toml"] }
crossbeam-channel = "0.5"
futures-util = "0.3"
http = "0.2"
humantime-serde = "1.0"
k8s-openapi = { version = "0.15.0", features = ["v1_19"] }
kube = { version = "0.74" }
nats = "0.22"
once_cell = "1.17"
prometheus = "0.13"
reqwest = { version = "0.11", features = ["json"] }
sentry = { version = "0.27" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls" , "postgres", "offline", "uuid", "time", "offline", "ipnetwork"] }
svc-agent = { version = "0.19", features = ["sqlx"] }
svc-authn = { version = "0.7", features = ["jose", "sqlx"] }
svc-authz = "0.11"
svc-error = { version = "0.4", features = ["sentry-extension", "sqlx", "serialize-status-code"] }
svc-utils = { version = "0.4", features = ["log-middleware", "authn-extractor", "metrics-middleware", "cors-middleware"] }
thiserror = "1.0"
tokio = { version = "1.20", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.1", features = ["v4", "serde"] }

[dependencies.dotenv]
version = "0.15"
optional = true

[dependencies.local-ip-address]
version = "0.4"
optional = true

[features]
local_ip = ["local-ip-address"]

[dev-dependencies]
testcontainers = "0.14"
